fix: Fix a few more layout and spacing issues

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -7,9 +7,6 @@ h1 {
 
 .header-container {
   background-color: $color-primary;
-  /* position: sticky;
-  top: 0;
-  z-index: 10; */
   height: $header-height;
   padding: 0 $padding-s;
 
